# db-cw

./: .gitignore  pyproject.toml
app/: db.py  main.py  utils.py
app/models/: __init__.py  base_model.py  category.py  characteristic.py  customer.py  manager.py  order.py  order_item.py  product.py  product_characteristic.py  return_.py  session.py
app/routes/: auth.py  categories.py  characteristics.py  customers.py  managers.py  orders.py  products.py  reports.py  returns.py  sql.py  statistics.py
app/schemas/: __init__.py  categories.py  characteristics.py  customers.py  managers.py  orders.py  products.py  returns.py  sql.py
migrations/: 0001-create-tables.sql  0002-create-sessions-table.sql
tests/: test_categories.py  test_orders.py  test_products.py  utils.py
